fix(left-truncate): fix css for left truncation

--- a/src/assets/stylesheets/shared/main.scss
+++ b/src/assets/stylesheets/shared/main.scss
@@ -22,9 +22,6 @@ body {
 .truncate {
     @include truncate;
 }
-.left-truncate {
-    @include left-truncate;
-}
 
 .truncate-ellipsis {
     display: table;
